--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -2,6 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:background="#ffffffff"
     android:foreground="?android:attr/selectableItemBackground">
 
@@ -15,7 +16,7 @@
             android:id="@+id/a"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:background="#FE6464"
+            android:background="@color/colorPrimary"
             android:gravity="center"
             android:scaleType="fitCenter"
             android:src="@drawable/clear" />
@@ -24,7 +25,7 @@
             android:id="@+id/b"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:background="@color/forestgreen"
+            android:background="@color/colorPrimary"
             android:gravity="center"
             android:scaleType="fitCenter"
             android:src="@drawable/done"
@@ -36,10 +37,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/a"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="20dp"
             android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
             android:layout_marginTop="20dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="20dp"
             android:gravity="center_horizontal"
             android:text="TEXTO"
             android:textColor="#ff000000"
@@ -53,11 +54,11 @@
             android:layout_below="@+id/text_dialog"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="20dp"
-            android:background="@color/tint_logo"
+            android:background="@color/colorPrimary"
             android:foreground="?android:attr/selectableItemBackground"
             android:gravity="center_vertical|center_horizontal"
             android:text="OK"
-            android:textStyle="bold"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textStyle="bold" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
