--- a/app/src/main/res/layout/history_single.xml
+++ b/app/src/main/res/layout/history_single.xml
@@ -10,31 +10,39 @@
     android:weightSum="3">
 
     <LinearLayout
-        android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
         android:id="@+id/hostpital_ll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:orientation="horizontal">
 
         <com.srinivas.biowax.CircularImageView
-            android:alpha=".7"
-            android:layout_marginLeft="8dp"
-            android:layout_width="90dp"
-            android:foregroundGravity="center"
-            android:layout_gravity="center"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:src="@drawable/image1hd" />
+            android:layout_gravity="center"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/building" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical"
-            android:weightSum="2">
+            android:weightSum="5">
 
             <TextView
-                android:id="@+id/hospitalname_tv"
+                android:id="@+id/hcfc_master_id"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center|start"
+                android:text="Seven Hills"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/waste_collection_date"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -43,13 +51,32 @@
                 android:textSize="15dp" />
 
             <TextView
-                android:id="@+id/hostpital_code_tv"
+                android:id="@+id/barcodenumber"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center|start"
                 android:text="1002"
                 android:textSize="15dp" />
+
+            <TextView
+                android:id="@+id/cover_color_id"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center|start"
+                android:text="1002"
+                android:textSize="15dp" />
+
+            <TextView
+                android:id="@+id/bag_weight_in_hcf"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center|start"
+                android:text="1002"
+                android:textSize="15dp" />
+
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
