--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -63,13 +63,13 @@
             app:boxBackgroundColor="@color/white">
 
             <EditText
-                android:id="@+id/driver_imei_number"
+                android:id="@+id/password_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@android:color/white"
                 android:ellipsize="start"
-                android:hint="Driver phone number"
-                android:inputType="text"
+                android:hint="Password"
+                android:inputType="textPassword"
                 android:textColor="@color/white"
                 android:textColorHighlight="@color/white"
                 android:textColorHint="@color/white"
