--- a/app/src/main/res/layout/garbage_collection.xml
+++ b/app/src/main/res/layout/garbage_collection.xml
@@ -132,10 +132,10 @@
             android:visibility="gone" />
 
         <android.support.v7.widget.RecyclerView
-            android:layout_marginTop="25dp"
             android:id="@+id/hospitalb_rv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="25dp">
 
         </android.support.v7.widget.RecyclerView>
     </LinearLayout>
