--- a/app/src/main/res/layout/garbage_history.xml
+++ b/app/src/main/res/layout/garbage_history.xml
@@ -13,6 +13,7 @@
         android:layout_height="50dp">
 
         <ImageView
+            android:id="@+id/history_back"
             android:layout_width="50dp"
             android:layout_height="45dp"
             android:src="@drawable/back" />
