--- a/app/src/main/res/layout/garbage_collection.xml
+++ b/app/src/main/res/layout/garbage_collection.xml
@@ -116,10 +116,21 @@
                     android:clickable="true"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:padding="10dp"
-                    android:src="@drawable/search" />
+                    android:src="@drawable/refresh" />
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
+        <SearchView
+            android:id="@+id/svOutletNameAddress"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="12dp"
+            android:background="@drawable/border">
+
+        </SearchView>
 
         <TextView
             android:layout_width="match_parent"
@@ -131,6 +142,7 @@
             android:textStyle="bold"
             android:visibility="gone" />
 
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/hospitalb_rv"
             android:layout_width="match_parent"
@@ -138,6 +150,14 @@
             android:layout_marginTop="25dp">
 
         </android.support.v7.widget.RecyclerView>
+        <TextView
+            android:layout_marginTop="125dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="No Records Found" />
+
     </LinearLayout>
     <!--  </ScrollView>-->
 
