--- a/app/src/main/res/layout/agentdetails.xml
+++ b/app/src/main/res/layout/agentdetails.xml
@@ -46,6 +46,7 @@
         android:textColorHint="@color/black">
 
         <EditText
+            android:enabled="false"
             android:id="@+id/employeecode"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -66,6 +67,7 @@
         android:textColorHint="@color/black">
 
         <EditText
+            android:enabled="false"
             android:id="@+id/employeename"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -86,6 +88,7 @@
         android:textColorHint="@color/black">
 
         <EditText
+            android:enabled="false"
             android:id="@+id/employephone"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -106,6 +109,7 @@
         android:textColorHint="@color/black">
 
         <EditText
+            android:enabled="false"
             android:id="@+id/email_id"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -126,6 +130,7 @@
         android:textColorHint="@color/black">
 
         <EditText
+            android:enabled="false"
             android:id="@+id/rootname"
             android:layout_width="match_parent"
             android:layout_height="50dp"
