--- a/app/src/main/res/layout/driverdetails.xml
+++ b/app/src/main/res/layout/driverdetails.xml
@@ -46,6 +46,8 @@
         android:textColorHint="@color/black">
 
         <EditText
+            android:enabled="false"
+            android:editable="false"
             android:id="@+id/employeecode"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -66,6 +68,7 @@
         android:textColorHint="@color/black">
 
         <EditText
+            android:enabled="false"
             android:id="@+id/employeename"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -86,6 +89,7 @@
         android:textColorHint="@color/black">
 
         <EditText
+            android:enabled="false"
             android:id="@+id/employephone"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -106,6 +110,7 @@
         android:textColorHint="@color/black">
 
         <EditText
+            android:enabled="false"
             android:id="@+id/email_id"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -127,6 +132,7 @@
 
         <EditText
             android:id="@+id/rootname"
+            android:enabled="false"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/border"
