--- a/app/src/main/res/layout/garbage_history.xml
+++ b/app/src/main/res/layout/garbage_history.xml
@@ -47,6 +47,14 @@
             android:layout_marginTop="40dp">
 
         </android.support.v7.widget.RecyclerView>
+        <TextView
+            android:layout_marginTop="125dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="No Records Found" />
+
     </LinearLayout>
     <!--  </ScrollView>-->
 
