--- a/app/src/main/res/layout/garbage_invoices.xml
+++ b/app/src/main/res/layout/garbage_invoices.xml
@@ -13,6 +13,7 @@
         android:layout_height="50dp">
 
         <ImageView
+            android:id="@+id/back_img"
             android:layout_width="50dp"
             android:layout_height="45dp"
             android:src="@drawable/back" />
@@ -46,6 +47,14 @@
             android:layout_marginTop="40dp">
 
         </android.support.v7.widget.RecyclerView>
+        <TextView
+            android:layout_marginTop="125dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="No Records Found" />
+
     </LinearLayout>
     <!--  </ScrollView>-->
 
